# project-ast

./: .gitignore  Anchor.toml  Cargo.toml  README.md  jest.config.js  package.json  site.webmanifest  tsconfig.json  vercel.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.js  polyfills.ts
frontend/src/__tests__/: Launchpad.test.tsx
frontend/src/components/: ErrorBoundary.tsx  WalletProvider.tsx
frontend/src/components/memecoin/: TokenStats.tsx  index.ts
frontend/src/pages/: CreateToken.tsx  ErrorPage.tsx  Home.tsx  Launchpad.tsx  Marketplace.tsx
frontend/src/types/: index.ts
programs/launchpad/: Cargo.toml
programs/launchpad/src/: lib.rs  state.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs  state.rs
programs/token-factory/: Cargo.toml
programs/token-factory/src/: lib.rs  state.rs
src/: main.tsx
src/__tests__/: CreateToken.test.tsx  Marketplace.test.tsx
src/components/: ErrorBoundary.tsx  Loading.tsx  Navbar.tsx
src/components/memecoin/: PriceCurve.tsx  SocialLinks.tsx
tests/: launchpad-edge.ts  marketplace.ts  token-factory-edge.ts
