[package]
name = "ast-launchpad"
version = "0.1.0"
edition = "2021"

[lib]
name = "ast_launchpad"
path = "programs/launchpad/src/lib.rs"

[workspace]
members = [
    "programs/launchpad",
    "programs/marketplace",
    "programs/token-factory",
]

[workspace.dependencies]
solana-program = "1.16.0"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
borsh = "0.10.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true