[package]
name = "ast-launchpad"
version = "0.1.0"
edition = "2021"

[lib]
name = "ast_launchpad"
path = "programs/launchpad/src/lib.rs"

[workspace]
members = [
    "programs/launchpad",
    "programs/marketplace",
    "programs/token-factory",
]

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
borsh = "0.10.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
solana-program = "=2.1.0"

[profile.release]
overflow-checks = true